--- a/car_trade_ui/src/main/webapp/contact_us.html
+++ b/car_trade_ui/src/main/webapp/contact_us.html
@@ -358,5 +358,7 @@
             src="http://ditu.google.cn/maps/api/js?key=&callback=initMap">
     </script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
