--- a/car_trade_ui/src/main/webapp/single_post.html
+++ b/car_trade_ui/src/main/webapp/single_post.html
@@ -472,5 +472,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
