--- a/car_trade_ui/src/main/webapp/user_center.html
+++ b/car_trade_ui/src/main/webapp/user_center.html
@@ -72,7 +72,7 @@
 	<div id="search">
 	    <button type="button" class="close">×</button>
 	    <form>
-	        <input type="search" value="" placeholder="type keyword(s) here" />
+	        <input type="search" value="" placeholder="type keyword(s) here"/>
 	        <button type="submit" class="primary-button"><a href="#">Search <i class="fa fa-search"></i></a></button>
 	    </form>
 	</div>
@@ -145,7 +145,7 @@
 									<span>$259.00</span>
 								</div>
 								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
+									<a href="buyer_cart.html" class="btn">view cart</a>
 								</div>
 							</div>
 						</li>
@@ -304,6 +304,8 @@
 
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
+
+	<script src="assets/js/vue.global.js"></script>
 
 </body>
 </html>
