--- a/car_trade_ui/src/main/webapp/blog_listing_no_sidebar.html
+++ b/car_trade_ui/src/main/webapp/blog_listing_no_sidebar.html
@@ -361,5 +361,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
