--- a/car_trade_ui/src/main/webapp/blog_listing_sidebar.html
+++ b/car_trade_ui/src/main/webapp/blog_listing_sidebar.html
@@ -469,5 +469,6 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
 </body>
 </html>
