--- a/car_trade_ui/src/main/webapp/car_listing_sidebar.html
+++ b/car_trade_ui/src/main/webapp/car_listing_sidebar.html
@@ -590,5 +590,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
