--- a/car_trade_ui/src/main/webapp/login_register-buyer.html
+++ b/car_trade_ui/src/main/webapp/login_register-buyer.html
@@ -586,5 +586,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
