--- a/car_trade_ui/src/main/webapp/seller_cart.html
+++ b/car_trade_ui/src/main/webapp/seller_cart.html
@@ -339,5 +339,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
