--- a/car_trade_ui/src/main/webapp/single_car.html
+++ b/car_trade_ui/src/main/webapp/single_car.html
@@ -561,5 +561,7 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
+	<script src="assets/js/vue.global.js"></script>
+
 </body>
 </html>
