--- a/car_trade_ui/src/main/webapp/about_us.html
+++ b/car_trade_ui/src/main/webapp/about_us.html
@@ -50,6 +50,8 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 
+	<script src="assets/js/vue.global.js"></script>
+	<script src="assets/js/axios.min.js"></script>
 
 	<!--[if lt IE 9]>
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -418,7 +420,6 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
-	<script src="assets/js/vue.global.js"></script>
 
 </body>
 </html>
