--- a/car_trade_ui/src/main/webapp/contact_us.html
+++ b/car_trade_ui/src/main/webapp/contact_us.html
@@ -50,6 +50,8 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 
+	<script src="assets/js/vue.global.js"></script>
+	<script src="assets/js/axios.min.js"></script>
 
 	<!--[if lt IE 9]>
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -358,7 +360,6 @@
             src="http://ditu.google.cn/maps/api/js?key=&callback=initMap">
     </script>
 
-	<script src="assets/js/vue.global.js"></script>
 
 </body>
 </html>
