--- a/car_trade_ui/src/main/webapp/index.html
+++ b/car_trade_ui/src/main/webapp/index.html
@@ -50,6 +50,9 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+	<script src="assets/js/vue.global.js"></script>
+	<script src="assets/js/axios.min.js"></script>
+
 	<!--[if lt IE 9]>
 	<script src="assets/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="assets/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -920,7 +923,6 @@
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
 
-	<script src="assets/js/vue.global.js"></script>
 
 </body>
 </html>
