update buyer&seller user center

--- a/car_trade_ui/src/main/webapp/buyer_user_center.html
+++ b/car_trade_ui/src/main/webapp/buyer_user_center.html
@@ -127,7 +127,7 @@
 					   <li>
 					   		<a href="#search"><i class="fa fa-search"></i></a>
 					   </li>
-						<li><a href="user_center.html"><i class="icofont icofont-ui-user"></i></a>
+						<li><a href="buyer_user_center.html"><i class="icofont icofont-ui-user"></i></a>
 							<div class="addtocart-dropdown">
 								<img src="assets/images/cart-angle.png" alt="cart">
 								<div class="total-price d-flex justify-content-between">
@@ -165,8 +165,8 @@
 					<div class="heading-content-bg wow fadeIn" data-wow-delay="0.75s" data-wow-duration="1s">
 						<div class="row">
 							<div class="heading-content col-md-12">
-								<p><a href="index.html">Homepage</a> / <em> User Center</em></p>
-								<h2>User <em>Center</em></h2>
+								<p><a href="index.html">Homepage</a> / <em> Buyer User Center</em></p>
+								<h2>Buyer <em>User Center</em></h2>
 							</div>
 						</div>
 					</div>
@@ -184,17 +184,19 @@
 							<h4>Zhang San</h4>
 							<div class="container">
 								<div class="row">
-									<ul class="car-info col-md-6">
-										<li><b>Age </b><p>2016/2017</p></li>
-										<li><b>Gender </b><p>2016/2017</p></li>
-										<li><b>Email </b><p>2016/2017</p></li>
-										<li><b>xxx </b><p>2016/2017</p></li>
+									<ul class="car-info col-md-5">
+										<img class="car-info col-md-7" src="assets/images/rin.jpg"/>
+										<br></br>
+										<button class="col-md-7 btn">上传头像</button>
 									</ul>
-									<ul class="car-info col-md-6">
-										<li><b>xxx </b><p>2016/2017</p></li>
-										<li><b>xxx </b><p>2016/2017</p></li>
-										<li><b>xxx </b><p>2016/2017</p></li>
-										<li><b>xxx </b><p>2016/2017</p></li>
+									<ul class="car-info col-md-7">
+										<li><b>BID </b><p>2016/2017</p></li>
+										<li><b>Name </b><p>2016/2017</p></li>
+										<li><b>Gender </b><p>2016/2017</p></li>
+										<li><b>Address </b><p>2016/2017</p></li>
+										<li><b>VIP </b><p>2016/2017</p></li>
+										<li><b>Tel </b><p>2016/2017</p></li>
+
 									</ul>
 								</div>
 							</div>
