--- a/car_trade_ui/src/main/webapp/single_car.html
+++ b/car_trade_ui/src/main/webapp/single_car.html
@@ -128,7 +128,7 @@
 					   <li>
 					   		<a href="#search"><i class="fa fa-search"></i></a>
 					   </li>
-						<li><a href="user_center.html"><i class="icofont icofont-ui-user"></i></a>
+						<li><a href="buyer_user_center.html"><i class="icofont icofont-ui-user"></i></a>
 							<div class="addtocart-dropdown">
 								<img src="assets/images/cart-angle.png" alt="cart">
 								<div class="total-price d-flex justify-content-between">
