增加了卖家car-center页面 更新了卖家、买家的个人中心、注册登录页面 更新style.css

--- a/ui/src/main/resources/static/login_register-buyer.html
+++ b/ui/src/main/resources/static/login_register-buyer.html
@@ -181,7 +181,7 @@
 	            <div class="col-xl-12">
 	                <div class="login-register">
 	                    <div class="row">
-	                        <div class="col-xl-6">
+	                        <div class="col-xl-5">
 	                            <div class="loginform">
 	                                <div class="checkout-login-form login-form">
 	                                     <h4>login</h4>
@@ -208,7 +208,7 @@
 	                                 </div>
 	                            </div>
 	                        </div>
-	                        <div class="col-xl-6">
+	                        <div class="col-xl-5">
 	                            <div class="loginform">
 	                                <div class="checkout-login-form login-form">
 										<h4>Register</h4>
@@ -242,12 +242,12 @@
 											   </div>
 										   </div>
 										   <div class="form-group">
-										     <label for="exampleInputEmail12">Age</label>
+										     <label for="exampleInputEmail12">Address</label>
 										     <input class="form-control">
 										   </div>
 	                                       <div class="form-group">
-	                                         <label for="exampleInputEmail14">Email address</label>
-	                                         <input type="email" class="form-control" id="exampleInputEmail14" aria-describedby="emailHelp">
+	                                         <label for="exampleInputEmail14">Tel</label>
+	                                         <input class="form-control" id="exampleInputEmail14">
 	                                       </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputPassword15">Password</label>
@@ -264,6 +264,14 @@
 	                                 </div>
 	                            </div>
 	                        </div>
+							<div class="col-xl-2 login-upload-icon">
+								<img class="login-upload-icon-img" src="./assets/images/user_male.jpg">
+								<div class="col-lg-1">
+									<br></br>
+									<button class="btn login-upload-btn">Upload Icon</button>
+								</div>
+
+							</div>
 						</div>
 	                </div>
 	            </div>
