--- a/ui/src/main/resources/static/login_register-seller.html
+++ b/ui/src/main/resources/static/login_register-seller.html
@@ -229,31 +229,18 @@
 										     <input class="form-control">
 										   </div>
 										   <div class="form-group">
-										     <label>Gender</label>
-											 <div class="checkbox">
-											   <input id="checkbox18" type="checkbox">
-											   <label for="checkbox18" class="choice">
-												  Male
-											   </label>
-											   <input id="checkbox19" type="checkbox">
-											   <label for="checkbox19" class="choice">
-												  Female
-											   </label>
-											   </div>
-										   </div>
-										   <div class="form-group">
-										     <label for="exampleInputEmail12">Age</label>
+										     <label for="exampleInputEmail12">Tel</label>
 										     <input class="form-control">
 										   </div>
 	                                       <div class="form-group">
-	                                         <label for="exampleInputEmail14">Email address</label>
+	                                         <label for="exampleInputEmail14">Address</label>
 	                                         <input type="email" class="form-control" id="exampleInputEmail14" aria-describedby="emailHelp">
 	                                       </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputPassword15">Password</label>
 	                                         <input type="password" class="form-control" id="exampleInputPassword15">
 	                                       </div>
-										   
+
 	                                       <div class="form-group less-mt">
 	                                             <div class="checkbox">
 	                                                 <button type="submit" class="btn login-btn">register</button>
