--- a/ui/src/main/resources/static/seller_car_center.html
+++ b/ui/src/main/resources/static/seller_car_center.html
@@ -74,7 +74,7 @@
 	<div id="search">
 	    <button type="button" class="close">×</button>
 	    <form>
-	        <input type="search" value="" placeholder="type keyword(s) here"/>
+	        <input type="search" value="" placeholder="type keyword(s) here" />
 	        <button type="submit" class="primary-button"><a href="#">Search <i class="fa fa-search"></i></a></button>
 	    </form>
 	</div>
@@ -147,7 +147,7 @@
 									<span>$259.00</span>
 								</div>
 								<div class="cart-botton">
-									<a href="buyer_cart.html" class="btn">view cart</a>
+									<a href="cart.html" class="btn">view cart</a>
 								</div>
 							</div>
 						</li>
@@ -165,8 +165,8 @@
 					<div class="heading-content-bg wow fadeIn" data-wow-delay="0.75s" data-wow-duration="1s">
 						<div class="row">
 							<div class="heading-content col-md-12">
-								<p><a href="index.html">Homepage</a> / <em> Buyer User Center</em></p>
-								<h2>Buyer <em>User Center</em></h2>
+								<p><a href="index.html">Homepage</a> / <em> Seller Car Center</em></p>
+								<h2>Seller <em>Car Center</em></h2>
 							</div>
 						</div>
 					</div>
@@ -175,30 +175,153 @@
 		</div>
 	</div>
 
-	<div class="recent-car single-car wow fadeIn" data-wow-delay="0.5s" data-wow-duration="1s">
+	<div class="on-grids wow fadeIn" data-wow-delay="0.5s" data-wow-duration="1s">
 		<div class="container">
 			<div class="recent-car-content">
-				<div class="column-box">
+				<div class="row">
 					<div class="col-md-12">
-						<div class="car-details">
-							<h4>Zhang San</h4>
-							<div class="container">
-								<div class="row">
-									<ul class="car-info col-md-5">
-										<img class="car-info col-md-7" src="assets/images/user_male.jpg"/>
-										<br></br>
-										<button class="col-md-7 btn">Upload Icon</button>
-									</ul>
-									<ul class="car-info col-md-7">
-										<li><b>BID </b><p>2016/2017</p></li>
-										<li><b>Name </b><p>2016/2017</p></li>
-										<li><b>Gender </b><p>2016/2017</p></li>
-										<li><b>Address </b><p>2016/2017</p></li>
-										<li><b>VIP </b><p>2016/2017</p></li>
-										<li><b>Tel </b><p>2016/2017</p></li>
+						<div class="row">
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$36.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_1.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
 
-									</ul>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
 								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$49.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_2.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$42.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_3.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$54.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_4.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$23.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_5.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="car-item">
+									<div class="thumb-content">
+										<div class="car-banner">
+											<a href="single_car.html">$68.000</a>
+										</div>
+										<div class="thumb-inner">
+											<a href="single_car.html"><img src="assets/images/car_item_6.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="down-content">
+										<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
+										<div class="line-dec"></div>
+
+										<ul class="car-info">
+											<li><div class="item"><i class="flaticon flaticon-calendar"></i><p>2013</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-speed"></i><p>160p/h</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-road"></i><p>26.00km</p></div></li>
+											<li><div class="item"><i class="flaticon flaticon-fuel"></i><p>Petrol</p></div></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<button class="btn">Upload Car</button>
 							</div>
 						</div>
 					</div>
@@ -206,8 +329,6 @@
 			</div>
 		</div>
 	</div>
-
-
 
 
 	<footer>
@@ -308,6 +429,7 @@
 
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
+
 
 </body>
 </html>
