--- a/car_trade_ui/src/main/webapp/login_register-buyer.html
+++ b/car_trade_ui/src/main/webapp/login_register-buyer.html
@@ -147,7 +147,7 @@
 									<span>$259.00</span>
 								</div>
 								<div class="cart-botton">
-									<a href="cart.html" class="btn">view cart</a>
+									<a href="buyer_cart.html" class="btn">view cart</a>
 								</div>
 							</div>
 						</li>
@@ -587,7 +587,6 @@
 
 	<!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
-
 
 </body>
 </html>
