--- a/ui/src/main/resources/static/login_register-buyer.html
+++ b/ui/src/main/resources/static/login_register-buyer.html
@@ -50,6 +50,7 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 
+
 	<script src="assets/js/vue.global.js"></script>
 	<script src="assets/js/axios.min.js"></script>
 
@@ -188,19 +189,16 @@
 	                                     <form>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputEmail12">Username</label>
-	                                         <input type="email" class="form-control" id="exampleInputEmail12" aria-describedby="emailHelp">
+	                                         <input type="email" class="form-control" id="exampleInputEmail12" aria-describedby="emailHelp" v-model="Log_username">
 	                                       </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputPassword13">Password</label>
-	                                         <input type="password" class="form-control" id="exampleInputPassword13">
+	                                         <input type="password" class="form-control" id="exampleInputPassword13" v-model="Log_password">
 	                                       </div>
 	                                         <div class="form-group less-mt">
 	                                             <div class="checkbox">
-	                                                 <button type="submit" class="btn login-btn">login</button>
-	                                                 <input id="checkbox15" type="checkbox">
-	                                                 <label for="checkbox15">
-	                                                    Remember me
-	                                                 </label>
+	                                                 <button type="submit" class="btn login-btn" @click="buyer_login_submit">login</button>
+
 	                                             </div>
 	                                         </div>
 <!-- 	                                       <a href="#" class="lost-pass">Lost your password? </a> -->
@@ -226,16 +224,16 @@
 											 </div> -->
 										   <div class="form-group">
 										     <label>Username</label>
-										     <input class="form-control">
+										     <input class="form-control" v-model="Reg_username">
 										   </div>
 										   <div class="form-group">
 										     <label>Gender</label>
 											 <div class="checkbox">
-											   <input id="checkbox18" type="checkbox">
+											   <input id="checkbox18" type="checkbox" value="Male" v-model="Gender">
 											   <label for="checkbox18" class="choice">
 												  Male
 											   </label>
-											   <input id="checkbox19" type="checkbox">
+											   <input id="checkbox19" type="checkbox" value="Female" v-model="Gender">
 											   <label for="checkbox19" class="choice">
 												  Female
 											   </label>
@@ -243,20 +241,20 @@
 										   </div>
 										   <div class="form-group">
 										     <label for="exampleInputEmail12">Address</label>
-										     <input class="form-control">
+										     <input class="form-control" v-model="Address">
 										   </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputEmail14">Tel</label>
-	                                         <input class="form-control" id="exampleInputEmail14">
+	                                         <input class="form-control" id="exampleInputEmail14" v-model="Tel">
 	                                       </div>
 	                                       <div class="form-group">
 	                                         <label for="exampleInputPassword15">Password</label>
-	                                         <input type="password" class="form-control" id="exampleInputPassword15">
+	                                         <input type="password" class="form-control" id="exampleInputPassword15" v-model="Reg_password">
 	                                       </div>
 										   
 	                                       <div class="form-group less-mt">
 	                                             <div class="checkbox">
-	                                                 <button type="submit" class="btn login-btn">register</button>
+	                                                 <button type="submit" class="btn login-btn" @click="buyer_register_submit">register</button>
 	                                             </div>
 	                                         </div>
 											 
@@ -616,5 +614,64 @@
     <script src="assets/js/custom.js"></script>
 
 
+	<script>
+
+		export default {
+			data() {
+				return {
+					Reg_username:" ",
+					Gender:" ",
+					Address:" ",
+					Tel:" ",
+					Reg_password:" ",
+					Log_username:" ",
+					Log_password:" "
+				};
+			},
+			methods: {
+				buyer_register_submit() {
+					axios
+							.post('http:116.63.170.243:9090/buyer_register??',
+									{
+										Username:this.Reg_username,
+										Gender:this.Gender,
+										Address:this.Address,
+										Tel:this.Tel,
+										Password:this.Reg_password
+									})
+							.then(function (res) {
+								if (res.data.status !== true) {
+									alert(res.data.errMsg);
+								} else {
+									alert('注册成功，请登录!');
+								}
+							}
+									.catch(function (error) { // 请求失败处理
+										console.log(error);
+									}));
+
+				},
+				buyer_login_submit(){
+					axios
+							.post('http:116.63.170.243:9090/buyer_login??',
+									{
+										Username:this.Log_username,
+										Password:this.Log_password
+									})
+							.then(function (res) {
+								if (res.data.status === true) {
+									window.location.href='/about_us';
+								} else {
+									alert(res.data.errMsg);
+								}
+							}
+									.catch(function (error) { // 请求失败处理
+										console.log(error);
+									}));
+				}
+			}
+		};
+
+	</script>
 </body>
 </html>
