添加了修改功能

--- a/Login/src/main/resources/static/buyer_vip.html
+++ b/Login/src/main/resources/static/buyer_vip.html
@@ -3,7 +3,7 @@
     <title>充值成为VIP会员</title>
 </head>
 <body>
-  <form action="/user/becomevip" method="post">
+  <form action="/user/becomeVIP" method="post">
     手机号:<input name="BTel" type="text"><br>
     <input type="submit" value="成为VIP">
   </form>
